cropper fixes

--- a/_assets/sass/base/_cloudcannon.scss
+++ b/_assets/sass/base/_cloudcannon.scss
@@ -1,5 +1,3 @@
-[class*="cropper-container"] {
-  * + * {
-    margin-top: 0;
-  }
+[class*="cropper-"] {
+  margin-top: 0;
 }
